@@ -1,3 +1,8 @@
+Tue Jan 12 13:33:51 GMT 2010  Samuel Thibault  <sthibault@debian.org>
+
+	* lib/pipeline.c (pipeline_pump): Fix off-by-one error when write
+	  returns EAGAIN (Debian bug #564818).
+
 Fri Jan  1 17:03:18 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* README (Copyright and licensing): Update copyright years.
